Cambio de activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Terrivial</string>
     <string name="jugar">Jugar</string>
+    <string name="todo">TODO</string>
 </resources>
