Beta inicial casi terminada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="geopolitica">GEOPOLITICA</string>
     <string name="ciencia">CIENCIA</string>
     <string name="entretenimiento">ENTRETENIMIENTO</string>
+    <string name="fin">Dios mío, jamás pensé que llegaría este día, pero has ganado. Mis dieces la verdad</string>
 </resources>
