Añadidas fotos para los botones de los potenciadores e implementacion inicial de los cardviews para los mismos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="ciencia">CIENCIA</string>
     <string name="entretenimiento">ENTRETENIMIENTO</string>
     <string name="fin">Dios mío, jamás pensé que llegaría este día, pero has ganado. Mis dieces la verdad</string>
+    <string name="ciencia2">Ciencia</string>
+    <string name="entretenimiento2">Entretenimiento</string>
+    <string name="geopolitica2">Geopolitica</string>
 </resources>
