Música de fondo implementada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="descr_ff">Este potenciador quita de forma completamente aleatoria dos respuestas incorrectas.</string>
     <string name="descr_pasar">Este potenciador permite al jugador cambiar de pregunta sin necesidad de responder a la actual (te lleva a una pregunta de la misma categoría). </string>
     <string name="descr_respcor">Este potenciador da directamente la respuesta correcta.</string>
+    <string name="mute">Mute music</string>
 </resources>
