Casino implementado con sus respectivas cartitas para los juegos y el sistema de gestión de apuestas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="intentos">Intentos: </string>
     <string name="apuesta_lograda">Enhorabuena, has logrado la apuesta</string>
     <string name="perdiste">Pues has perdido culega, mas suerte la próxima</string>
+    <string name="lista_negra">Lista negra</string>
+    <string name="introduce_tu_apuesta">Introduce tu apuesta</string>
 </resources>
